--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "backend-furntech",
   "version": "1.0.0",
+  "description": "Backend for Furntech App",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Ritesh",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
@@ -19,13 +18,15 @@
     "express": "^4.21.1",
     "express-fileupload": "^1.5.1",
     "express-session": "^1.18.1",
-    "fs": "^0.0.1-security",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.10.0",
+    "nodemailer": "^6.10.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.9"
   }
 }
+
