--- a/package.json
+++ b/package.json
@@ -1,32 +1,1 @@
-{
-  "name": "backend-furntech",
-  "version": "1.0.0",
-  "description": "Backend for Furntech App",
-  "main": "app.js",
-  "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
-  },
-  "author": "Ritesh",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "ejs": "^3.1.10",
-    "express": "^4.21.1",
-    "express-fileupload": "^1.5.1",
-    "express-session": "^1.18.1",
-    "http-errors": "^2.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.3",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.10.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.9"
-  }
-}
-
+{Add commentMore actions  "name": "backend-furntech",  "version": "1.0.0",  "description": "Backend for Furntech App",  "main": "app.js",  "scripts": {    "start": "node app.js",    "dev": "nodemon app.js"  },  "author": "Ritesh",  "license": "ISC",  "dependencies": {    "bcrypt": "^5.1.1",    "cookie-parser": "^1.4.7",@@ -19,13 +18,15 @@    "express": "^4.21.1",    "express-fileupload": "^1.5.1",    "express-session": "^1.18.1",    "http-errors": "^2.0.0",    "jsonwebtoken": "^9.0.2",    "mongoose": "^8.7.3",    "morgan": "^1.10.0",    "multer": "^1.4.5-lts.1",    "nodemailer": "^6.10.0"  },  "devDependencies": {    "nodemon": "^3.1.9"  }}
